--- a/SPRINT 5/Users/package.json
+++ b/SPRINT 5/Users/package.json
@@ -1,16 +1,17 @@
 {
     "name": "users",
-    "version": "1.0.0",
+    "version": "0.0.0",
+    "private": true,
     "scripts": {
         "start": "node ./bin/www"
     },
     "dependencies": {
-        "@prisma/client": "^4.18.0",
-        "express": "^4.18.2",
-        "jsonwebtoken": "^9.0.0",
-        "prisma": "^4.18.0"
-    },
-    "devDependencies": {},
-    "author": "",
-    "license": "ISC"
+        "cookie-parser": "~1.4.4",
+        "debug": "~2.6.9",
+        "ejs": "~2.6.1",
+        "express": "~4.16.1",
+        "express-session": "~1.18.0",
+        "http-errors": "~1.6.3",
+        "morgan": "~1.9.1"
+    }
 }
